<resources>
    <string name="app_name">Zak\'s BATTLESHIPS</string>
    <string name="beginButton">BEGIN</string>
    <string name="backButtonText">BACK</string>
    <string name="rules">RULES / SETTINGS</string>
    <string name="high_scores">HIGH SCORES</string>
    <string name="enemy_grid">Enemy Grid</string>
    <string name="your_grid">Your Grid</string>
    <string name="battleship_image_description">Image of a battleship</string>
    <color name="sea_blue">#0058AB</color>
    <string name="rules_full">• Battleships is a strategy game for two players
        \n\n<br /><br />
    • Players alternate turns in attempting to guess the position of the opposing player\'s ships
        \n\n<br /><br />
    • Once all ships have been sunk on a single grid, that player is declared the winner</string>
    <string name="change_grid_size">To modify the size of the grid, enter the size below
        (min 5x5, max 30x30, default 10x10, rectangles also work):</string>
    <string name="columns">COLUMNS</string>
    <string name="rows">ROWS</string>
    <string name="difficulty_text">To change the difficulty, enter a number between 1 and 10.
    1 being easy, and 10 being the most difficult. Note that difficulty acts as a score multiplier!</string>
    <string name="difficulty_hint">DIFFICULTY</string>
    <string name="image_description">Main battleship image</string>
    <string name="first_high_score">1:</string>
    <string name="_2">2:</string>
    <string name="reset">RESET</string>
    <string name="high_scores_empty">1) 0\n2) 0\n3) 0</string>

</resources>