<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesActivity"
    android:background="@color/sea_blue">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/rulesTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rules"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/rulesBodyText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="#0003A9F4"
            android:text="@string/rules_full"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/editGridsizeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_grid_size"
            android:textColor="#000000"
            android:gravity="center"/>

        <EditText
            android:id="@+id/columnsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/columns"
            android:inputType="number" />

        <EditText
            android:id="@+id/rowsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/rows"
            android:inputType="number" />

        <Button
            android:id="@+id/rulesBackButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/backButtonText"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            app:backgroundTint="#6662C2" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>