<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/sea_blue">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:background="#0058AB"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/beginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/beginButton"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            app:backgroundTint="#6662C2" />

        <Button
            android:id="@+id/highScoresButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            android:text="@string/high_scores"
            app:backgroundTint="#6662C2" />

        <Button
            android:id="@+id/rulesButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            android:text="@string/rules"
            app:backgroundTint="#6662C2" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>