<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HighScoresActivity"
    android:background="@color/sea_blue">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/highScoreTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_scores"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_margin="16dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/highScoreTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/high_scores_empty"
            android:textColor="#000000"
            android:textSize="25sp" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/reset"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            app:backgroundTint="#6662C2" />

        <Button
            android:id="@+id/highScoresBackButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/backButtonText"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            app:backgroundTint="#6662C2" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>